custom DOT parser; improve GioFileFormat
GioFileFormat: now has a main file extension, to be used for export
custom DOT parser hardened on 100+ example files
fixed remaining JGraphT tests